# specterext-exfund

./: MANIFEST.in  README.md  parse_csv.py  setup.cfg  test_parse_csv.py
src/cryptoadvance/specterext/exfund/: __main__.py  appconfig.py  config.py  controller.py  service.py
src/cryptoadvance/specterext/exfund/templates/exfund/: index.jinja  table.jinja
src/embeed/specterext/massfund/: __main__.py  config.py  controller.py  service.py  util.py
src/embeed/specterext/massfund/templates/massfund/: index.jinja  table.jinja
src/embeed/specterext/massfund/templates/massfund/components/: fee-selection.html
