[metadata]
name = specterext_exfund
version = 0.1.6
author = Stepan Snigirev
author_email = snigirev.stepan@gmail.com
description = Specter Desktop extension to fund multiple addresses in one go
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stepansnigirev/specterext-exfund
project_urls =
    Bug Tracker = https://github.com/stepansnigirev/specterext-exfund/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=true
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src